<resources>
    <string name="app_name">B-Sports</string>
    <string name="login_sebagai">Login Sebagai :</string>
    <string name="user">User</string>
    <string name="owner">Owner</string>
    <string name="tidak_punya_akun">Tidak punya akun? </string>
    <string name="daftar_disini"><u>Daftar Disini</u></string>
    <string name="register"><b>Register</b></string>
    <string name="open">Opened</string>
    <string name="close">Closed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Bagian Layout Register
    <string name="daftar_sekarang">Daftar Sekarang di B-Sports</string>
    <string name="nama">Nama</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="fb">Daftar Dengan Facebook</string>
    <string name="gmail">Daftar Dengan Gmail</string>
    <string name="atau">Atau</string>
    <string name="register_button">REGISTER</string>

    //Bagian Layout Login
    <string name="login">LOGIN</string>
    <string name="login_fb">Login Dengan Facebook</string>
    <string name="login_gmail">Login Dengan Gmail</string>

    //Bagian Layout pilih booking
    <string name="sampai">Sampai</string>
    <string name="cek">Cek</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="title_activity_maps_tempat">Map</string>
    <string name="title_activity_menu_utama_owner">MenuUtamaOwner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    //Bagian Layout Pemesanan_10
    <string name="nomor_lapangan"><b>Lapangan Badminton 1</b></string>
    <string name="kode_booking">"Kode Booking    : BK003"</string>
    <string name="nama_pembook">"Nama                  : Angga"</string>
    <string name="tanggal_book">"Tanggal              : 17 Januari 2018"</string>
    <string name="Jam_booking">"Jam                     : 11.00 &#8211; 12.00"</string>
    <string name="DP_booking">"DP                        : Rp 25.000,&#8211;"</string>
    <string name="button_lanjut">LANJUTKAN PEMBAYARAN</string>

    //Bagian layout menu_booking_berjalan
    <string name="gor_sima"><b>GOR Sima</b></string>
    <string name="bk003"><b>BK003</b></string>
    <string name="lapangan"><b>Lapangan 1</b></string>
    <string name="track">Track</string>
    <string name="timer">Timer</string>

    //Bagian layout kelola lapangan 16
    <string name="booking_list"><b>Booking List</b></string>
    <string name="book1">11.00 &#8211; 12.00 </string>
    <string name="book1_name">Angga</string>
    <string name="book2">15.00 &#8211; 16.00 </string>
    <string name="book2_name">Dono</string>

    //Bagian layout activity_detail_place
    <string name="judul_deskripsi_tempat">Gor Sima Beji</string>
    <string name="ini_deskripsi_aplikasinya">Gor sima beji menawarkan 4 Lapangan utama yang bisa digunakan untuk
    bermain. Dengan fasilitas yang memadai dan harga yang sangat terjangkau
    </string>
    <string name="tempat">Jl Kabel No.34 RT. 07/04, Beji, Kota Depok, Jawa Barat</string>
    <string name="harga1">Rp 25.000 / Jam</string>
    <string name="book_now">Book Now</string>

    //Bagian layout activity_ubah_deskripsi
    <string name="deskripsi">Deskripsi</string>
    <string name="lokasi">Lokasi</string>
    <string name="jam_operasional">Jam Operasional</string>
    <string name="harga">Harga</string>
    <string name="nomer_telepon_hp">Nomer Telepon / Hp</string>
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>

    //Bagian layout activity_waktu_main
    <string name="_00_00_00">00:00:00</string>
    <string name="_00">00</string>
    <string name="selesai_bermain">Selesai Bermain</string>

    //Buat tab lapangan
    <string name="lapangan_2">Lapangan Badminton 2</string>
    <string name="book2_1">09.00 &#8211; 10.00 </string>
    <string name="book2_1_name">Alvin</string>
    <string name="book2_2">11.00 &#8211; 12.00 </string>
    <string name="book2_2_name">Andi</string>

    <string name="lapangan_3">Lapangan Badminton 3</string>
    <string name="book3_1">10.00 &#8211; 11.00 </string>
    <string name="book3_1_name">Ardi</string>
    <string name="book3_2">13.00 &#8211; 14.00 </string>
    <string name="book3_2_name">Tandi</string>

    <string name="lapangan_4">Lapangan Badminton 4</string>
    <string name="book4_1">12.00 &#8211; 13.00 </string>
    <string name="book4_1_name">Rian</string>
    <string name="book4_2">14.00 &#8211; 15.00 </string>
    <string name="book4_2_name">Budi</string>

    <string name="lapangan_5">Lapangan Badminton 5</string>
    <string name="book5_1">18.00 &#8211; 19.00 </string>
    <string name="book5_1_name">Deni</string>
    <string name="book5_2">19.00 &#8211; 20.00 </string>
    <string name="book5_2_name">Karman</string>

    //pilih booking
    <string name="bok1">15.00 - 17.00   :  Rendi Raharja</string>
    <string name="bok2">19.00 - 20.00   :  Arjuna Perwira</string>


</resources>
