<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.angga.b_sport.Lapangan4">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.angga.b_sport.Lapangan1">

        <RelativeLayout
            android:id="@+id/kotak_gambar"
            android:layout_width="220dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/kotak_orange"
            android:padding="5dp">

            <ImageView
                android:id="@+id/lapang_1"
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/nomor_lapangan"
                android:src="@drawable/lapangan_badminton" />

            <TextView
                android:id="@+id/text_lapang_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lapang_1"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/lapangan_4"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimary" />
        </RelativeLayout>

        <TextView
            android:id="@+id/booking_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kotak_gambar"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/booking_list"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPrimary" />

        <RelativeLayout
            android:id="@+id/daftar_booking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/booking_list"
            android:layout_margin="10dp"
            android:background="@drawable/kotak_orange"
            android:padding="10dp">

            <TextView
                android:id="@+id/book_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book4_1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/nama_book_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/book_1"
                android:layout_alignTop="@+id/book_1"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:layout_toEndOf="@+id/book_1"
                android:layout_toRightOf="@+id/book_1"
                android:text="@string/book4_1_name"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/book_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_1"
                android:layout_marginTop="10dp"
                android:text="@string/book4_2"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/nama_book_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/book_2"
                android:layout_alignTop="@+id/book_2"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:layout_toEndOf="@+id/book_2"
                android:layout_toRightOf="@+id/book_2"
                android:text="@string/book4_2_name"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>
