<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/daftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/daftar_sekarang"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/daftar"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_round_grey"
            android:drawableEnd="@drawable/nama_icon"
            android:drawableRight="@drawable/nama_icon"
            android:hint="@string/nama"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nama"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_round_grey"
            android:drawableEnd="@drawable/mail_icon"
            android:drawableRight="@drawable/mail_icon"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_round_grey"
            android:drawableEnd="@drawable/password_icon"
            android:drawableRight="@drawable/password_icon"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/nomorhp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_round_grey"
            android:drawableEnd="@drawable/phone_icon"
            android:drawableRight="@drawable/phone_icon"
            android:hint="@string/nomor_hp"
            android:inputType="number"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:textAppearance="?android:textAppearanceMedium" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nomorhp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_round_orange2"
            android:text="@string/register_button"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/text_atau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/atau"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorPrimary" />

        <ImageView
            android:id="@+id/garis_kiri"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignBottom="@+id/text_atau"
            android:layout_alignLeft="@+id/fb_button"
            android:layout_alignStart="@+id/fb_button"
            android:layout_alignTop="@+id/text_atau"
            android:layout_toLeftOf="@+id/text_atau"
            android:layout_toStartOf="@+id/text_atau"
            android:src="@drawable/garis_orange" />

        <ImageView
            android:id="@+id/garis_kanan"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignBottom="@+id/text_atau"
            android:layout_alignEnd="@+id/fb_button"
            android:layout_alignRight="@+id/fb_button"
            android:layout_alignTop="@+id/text_atau"
            android:layout_toEndOf="@+id/text_atau"
            android:layout_toRightOf="@+id/text_atau"
            android:src="@drawable/garis_orange" />

        <Button
            android:id="@+id/fb_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_atau"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_round_blue"
            android:drawableLeft="@drawable/fb_icon"
            android:drawableStart="@drawable/fb_icon"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/fb"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#fff" />

        <Button
            android:id="@+id/gmail_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fb_button"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_round_red"
            android:drawableLeft="@drawable/gmail_icon"
            android:drawableStart="@drawable/gmail_icon"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/gmail"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#fff" />


    </RelativeLayout>
</ScrollView>