<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.angga.b_sport.Pemesanan_10">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tb_pemesanan"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Pemesanan">

    </android.support.v7.widget.Toolbar>


    <ImageView
        android:id="@+id/gambar_tempat"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/tb_pemesanan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-15dp"
        android:src="@drawable/lapangan_badminton" />

    <android.support.v7.widget.CardView
        android:id="@+id/kotak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gambar_tempat"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="-20dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/nomor_lapangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/nomor_lapangan"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/kode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nomor_lapangan"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:gravity="start"
                android:text="@string/kode_booking"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/nama_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/kode"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/nama_pembook"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/tanggal_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nama_book"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/tanggal_book"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/jam_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tanggal_book"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="start"
                android:text="@string/Jam_booking"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#fff" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/button_lanjutkan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/kotak"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_round_orange"
        android:text="@string/button_lanjut"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#fff" />

</RelativeLayout>
