<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.angga.b_sport.Login_menu">

    <ImageView
        android:id="@+id/logo_tulisan_putih"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo_tulisan_putih" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_tulisan_putih"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:background="#fff"
        android:id="@+id/relativeLayout">

        <TextView
            android:id="@+id/text_login_sebagai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/login_sebagai"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/button_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_login_sebagai"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_round_orange"
            android:text="@string/user"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#fff" />

        <Button
            android:id="@+id/button_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_user"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_round_orange"
            android:text="@string/owner"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/text_tidak_punya_akun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_owner"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"
            android:text="@string/tidak_punya_akun"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/daftar_disini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/text_tidak_punya_akun"
            android:layout_alignBottom="@+id/text_tidak_punya_akun"
            android:layout_toEndOf="@+id/text_tidak_punya_akun"
            android:layout_toRightOf="@+id/text_tidak_punya_akun"
            android:text="@string/daftar_disini"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            />

    </RelativeLayout>

</RelativeLayout>
